<resources>
    <string name="app_name">PhoneDooring</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="search">Поиск</string>
    <string name="rent">Сдать в аренду</string>
    <string name="surrender">Мои ключи</string>
    <string name="welcome_name">Здравствуйте,\nпользователь</string>
    <string name="town">Выберите город</string>
    <string name="date">Выберите дату</string>
    <string name="number_person">Выберите количество персон</string>
    <string name="find">Найти</string>
    <string name="not_connection">Нет связи с сервером</string>
    <string name="location">Местоположение</string>
    <string name="description">Описание</string>
    <string name="photo">Фото</string>
    <string name="save">Сохранить</string>
    <string name="registration">Регистрация</string>
    <string name="servicedesc">TestNfc service</string>
    <string name="aiddescription">TestNfc aid</string>
    <string name="mail">Почта</string>
    <string name="password">Пароль</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="account">Aккаунт</string>
</resources>