<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtAccountLoginCreateMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mail"
            android:autofillHints="@string/mail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/txtAccountLoginCreatePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:autofillHints="@string/password"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/txtAccountLoginCreateSurName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/surname"
            android:autofillHints="@string/surname"
            android:inputType="text"/>

        <EditText
            android:id="@+id/txtAccountLoginCreateName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/name"
            android:autofillHints="@string/name"
            android:inputType="text"/>

        <ImageButton
            android:id="@+id/imgBtnAccountLoginCreateNamePhoto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/baseline_account_circle_24"
            android:background="#FFFFFF"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:scaleType="fitStart"/>

        <Button
            android:id="@+id/btnAccountLoginCreateOk"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/create_account"
            android:textAllCaps="false" />

    </LinearLayout>
</ScrollView>